--- a/QtDataBase/qtdatabase.ui
+++ b/QtDataBase/qtdatabase.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>572</width>
+    <width>484</width>
     <height>496</height>
    </rect>
   </property>
@@ -49,6 +49,34 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="pushButton_5">
+        <property name="text">
+         <string>СОСТОЯНИЕ ПО БИЛЕТАМ</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_6">
+        <property name="text">
+         <string>ФИНАНСОВЫЙ ОТЧЕТ</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_7">
+        <property name="text">
+         <string>К. ПУСТЫХ ПРОДАЖ</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_8">
+        <property name="text">
+         <string>К. УСПЕШНОСТИ</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -77,7 +105,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>572</width>
+     <width>484</width>
      <height>21</height>
     </rect>
    </property>
@@ -112,7 +140,7 @@
    <slot>queryRepertoire()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>523</x>
+     <x>473</x>
      <y>123</y>
     </hint>
     <hint type="destinationlabel">
@@ -128,8 +156,8 @@
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>504</x>
-     <y>452</y>
+     <x>473</x>
+     <y>465</y>
     </hint>
     <hint type="destinationlabel">
      <x>461</x>
@@ -160,8 +188,8 @@
    <slot>BuyClicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>511</x>
-     <y>52</y>
+     <x>473</x>
+     <y>65</y>
     </hint>
     <hint type="destinationlabel">
      <x>433</x>
@@ -176,12 +204,60 @@
    <slot>ReturnClicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>554</x>
-     <y>87</y>
+     <x>473</x>
+     <y>94</y>
     </hint>
     <hint type="destinationlabel">
      <x>555</x>
      <y>177</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton_5</sender>
+   <signal>clicked()</signal>
+   <receiver>QtDataBaseClass</receiver>
+   <slot>TicketsStateClicked()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>423</x>
+     <y>177</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>419</x>
+     <y>177</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton_6</sender>
+   <signal>clicked()</signal>
+   <receiver>QtDataBaseClass</receiver>
+   <slot>FinancialReport()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>473</x>
+     <y>210</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>566</x>
+     <y>203</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton_7</sender>
+   <signal>clicked()</signal>
+   <receiver>QtDataBaseClass</receiver>
+   <slot>EmptySalesClicked()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>345</x>
+     <y>223</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>332</x>
+     <y>225</y>
     </hint>
    </hints>
   </connection>
@@ -191,5 +267,8 @@
   <slot>searchStages()</slot>
   <slot>BuyClicked()</slot>
   <slot>ReturnClicked()</slot>
+  <slot>TicketsStateClicked()</slot>
+  <slot>FinancialReport()</slot>
+  <slot>EmptySalesClicked()</slot>
  </slots>
 </ui>
